--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest 
     steps:
       - uses: actions/checkout@v4
+      - name: Debug directory structure
+        run: |
+          ls -R
+          pwd
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -18,15 +22,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r test-homework/homework/cook_book/requirements.txt flake8 isort black mypy
+          pip install -r homework/cook_book/requirements.txt flake8 isort black mypy
       - name: Run flake8
-        run: flake8 test-homework/homework/
+        run: flake8 homework/
       - name: Run isort
-        run: isort --check-only --diff --profile black test-homework/homework/
+        run: isort --check-only --diff --profile black homework/
       - name: Run black
-        run: black --check --diff test-homework/homework/
+        run: black --check --diff homework/
       - name: Run mypy
-        run: mypy test-homework/homework/ --ignore-missing-imports
+        run: mypy homework/ --ignore-missing-imports
 
   test:  # Тесты
     runs-on: ubuntu-latest
